# Learning-System

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.py
backend/: Dockerfile  README.md  entrypoint.sh
docs/: 00-main-task.md  01-requirements-breakdown.md  02-repo-and-current-state-analysis.md  03-architecture.md  04-module-boundaries.md  05-api-and-data-contracts.md  06-implementation-plan.md  07-subagent-orchestration-plan.md  08-foundation-remediation-plan.md  09-frontend-preview-launch.md  10-backend-password-hash-remediation.md  100-latest-fixes-handoff-main.md  101-post-manual-test-wave2-main.md  102-post-manual-test-wave2-requirements.md  103-post-manual-test-wave2-current-state.md  104-post-manual-test-wave2-architecture.md  105-post-manual-test-wave2-module-boundaries.md  106-post-manual-test-wave2-api-contracts.md  107-post-manual-test-wave2-implementation-plan.md  108-post-manual-test-wave2-subagent-orchestration-plan.md  109-post-manual-test-wave2-test-plan.md  11-review-and-artifacts-module.md  110-wave2-finalization-main.md  111-wave2-finalization-plan.md  12-frontend-notes-module.md  13-frontend-review-module.md  14-frontend-settings-module.md  15-docker-and-deployment-module.md  16-backend-settings-admin-module.md  17-final-validation-plan.md  18-roadmap-next-steps.md  19-route-a-engineering-hardening.md  20-route-b-product-enhancement.md  21-route-a-orchestration.md  22-route-a-docker-rerun-validation.md  23-route-a-blocking-issues-remediation.md  24-route-a-final-report.md  25-route-b-orchestration.md  (+75 more)
(+285 files in other folders)
